Fix bug on navbar not showing on mobile
- Found bug that makes navbar not show on mobile
- Find that there is no posistion on navbar
- Add posistion on navbar
- Update show navbar style

--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -1,6 +1,7 @@
 /* NAVBAR */
 
 .navbar {
+    position: fixed;
     top: 0;
     z-index: 1000;
 
@@ -122,6 +123,9 @@
 
 /* MOBILE */
 @media (max-width: 768px) {
+    .navbar {
+        width: 100vw;
+    }
 
     .menu-toggle {
         display: flex;
@@ -129,7 +133,7 @@
 
     .nav-links {
         position: absolute;
-        top: 70px;
+        top: 90px;
         left: 0;
 
         width: 100%;
@@ -139,14 +143,20 @@
 
         flex-direction: column;
         align-items: center;
-
-        padding: 2rem 0;
         gap: 1.5rem;
 
-        display: none;
+        padding: 2rem 0;
+
+        opacity: 0;
+        transform: translateY(-10px);
+        pointer-events: none;
+        
+        transition: all 0.25s ease;
     }
 
     .nav-links.active {
-        display: flex;
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: auto;
     }
 }
